discussion/kv_engine/139705/139705_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42282 magma-kvstore: Use disk snapshot for bySeqno scan

The bySeqno iterator requires the snapshot to be held for the duration
of the scan. The default snapshot holds inmemory memtables at that
point-in-time as part of the snapshot. This results in signficant memory usage
if the snapshot needs to be held for a longer duration.

This issue can be resolved by forcing writecache flush for the
kvstore and obtain the diskonly snapshot for performing bySeqno scan.

Change-Id: If7c4c6028509a3ab97acfb79fccf6f169b3def81

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2020-11-08 13:43:20.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-08 14:04:45.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5512/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12: error: redefinition of "status" [clang-diagnostic-error]
    Status status;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1309:10: note: previous definition is here
    auto status = magma->SyncKVStore(vbid.get());
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5512/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12:
error: redefinition of "status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27308/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12:
error: redefinition of "status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27308/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31624/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1310): error C2086: "magma::Status status": redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7004/ : FAILURE

Compile error at [2020-11-08T13:44:40.237Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12:
error: redeclaration of ?magma::Status status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7004/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7207/ : FAILURE

Compile error at [2020-11-08T13:44:40.436Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12:
error: redefinition of "status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14812/ : FAILURE

Compile error at [2020-11-08T13:44:46.092Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1310:12:
error: redefinition of "status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5965/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5965/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4044/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6893/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
